--- a/config.org
+++ b/config.org
@@ -19,6 +19,11 @@ Running the above command will clone this repository into your emacs settings, o
 This config file is saved as an org file, then parsed into valid emacs-lisp. As such, most sections have some sort of rambling attached explaining what the keybindings are, what packages I've added, why things are the way they are, etc. You should read through them to get the full benefit of the configuration. Also, if you do decide to download, try deleting these ramblings and filling them in with your own. Doing so helped me understand each part of the config, customize it further to my liking, and got me more familiar with the programs I was using.
 
 ** TODO Dependencies for:
+*** TODO things to do
+openwith dependencies
+make sure to use all-the-icons-install-fonts
+ag
+avfs
 *** EXWM
 EXWM is a window manager with Emacs as its base. Everything is treated as a buffer, allowing us to use Emacs bindings across the entire system and keep "mode-switching" to a minimum.
 
@@ -68,7 +73,7 @@ For now, this configuration is simply a nice way to use emacs, with a lot of tim
 
 * TODO Interface
 ** TODO Window Manager
- Everything surrounding EXWM is contained here, as well as a few extra controls which will only be accesible while emacs is in focus.
+ Everything surrounding EXWM is contained here, as well as a few extra controls which will only be accesible while Emacs is in focus.
 *** TODO EXWM
  Currently I'm still using i3 due to disappointing bugs plaguing EXWM in NixOS. This will probably change upon changing to Guix.
 **** Installation
@@ -180,7 +185,7 @@ p
        ("s-SPC" . 'dmenu))
  #+END_SRC
 
-**** Functions to start processes
+**** TODO Functions to start processes
 
  #+BEGIN_SRC emacs-lisp
    (defun exwm-async-run (name)
@@ -201,7 +206,7 @@ p
      (start-process "halt" nil "sudo" "halt"))
  #+END_SRC
 
-**** Keybindings to start processes
+**** TODO Keybindings to start processes
  #+BEGIN_SRC emacs-lisp
    (global-set-key (kbd "<s-tab>") 'daedreth/launch-browser)
    (global-set-key (kbd "<XF86ScreenSaver>") 'daedreth/lock-screen)
@@ -226,7 +231,6 @@ A set of controls/settings to manipulate audio from inside emacs.
      (interactive)
      (start-process "lower-volume" nil "pulsemixer" "--change-volume" (concat "-" volumeModifier)))
  #+END_SRC
-
 
 **** Audio Keybindings
  I have a couple dedicated audio keys on my keyboard, which I bind the above functions to here. That being said, these are the only dedicated audio keys I have, so other audio keybinds (like those defined in [[Media]]) are bound to function keys.
@@ -661,7 +665,94 @@ For the rare times I need to use a terminal in emacs that isn't eshell, it shoul
  #+END_SRC
 
 ** TODO File manager
-Maybe dired+?
+*** Dired subtrees
+Lets you open subdirectories in a dired buffer with =tab=. Cycle depth with =shift tab=.
+#+BEGIN_SRC emacs-lisp
+  (use-package dired
+    :ensure nil
+    :delight "Dired "
+    :custom
+    (dired-auto-revert-buffer t)
+    (dired-dwim-target t)
+    (dired-hide-details-hide-symlink-targets nil)
+    (dired-listing-switches "-alh")
+    (dired-ls-F-marks-symlinks nil)
+    (dired-recursive-copies 'always))
+  (use-package dired-subtree
+    :ensure t
+    :bind (:map dired-mode-map
+                ("<backtab>" . dired-subtree-cycle)
+                ("<tab>" . dired-subtree-toggle)))
+#+END_SRC
+
+*** All the icons
+Makes it easier to differentiate files in dired, making it a lot more pleasant.
+#+BEGIN_SRC emacs-lisp
+  (use-package all-the-icons
+    :ensure t
+    :init
+    (unless (file-exists-p
+             (concat (or (getenv "XDG_DATA_HOME")
+                        (concat (getenv "HOME") "/.local/share"))
+                     "/fonts/"))
+      (all-the-icons-install-fonts)))
+  (use-package all-the-icons-dired
+    :after all-the-icons
+    :hook dired)
+
+  (with-eval-after-load 'all-the-icons-dired
+    (defun ess/dired-subtree-icons ()
+      (dired-subtree-down)
+      (dired-subtree-narrow)
+      (when (fboundp 'dired-insert-set-properties)
+        (let ((inhibit-read-only t)
+              (ov (dired-subtree--get-ov)))
+          (dired-insert-set-properties (overlay-start ov) (overlay-end ov))))
+      (all-the-icons-dired--reset)
+      (all-the-icons-dired--display)
+      (widen))
+
+    (remove-hook 'dired-subtree-after-insert-hook 'dired-subtree--after-insert)
+    (add-hook 'dired-subtree-after-insert-hook 'ess/dired-subtree-icons))
+#+END_SRC
+
+*** TODO Dired hacks
+
+*** Open with
+
+#+BEGIN_SRC emacs-lisp
+    (use-package openwith
+      :ensure t
+      :config
+      (add-to-list  'mm-inhibit-file-name-handlers 'openwith-file-handler) ;; Stops open-with from messing with outbound email
+      (setq openwith-associations
+            (list
+             (list (openwith-make-extension-regexp
+                    '("mpg" "mpeg" "mp3" "mp4"
+                      "avi" "wmv" "wav" "mov" "flv"
+                      "ogm" "ogg" "mkv" "webm"))
+                   "mpv"
+                   '(file))
+             (list (openwith-make-extension-regexp
+                    '("xbm" "pbm" "pgm" "ppm" "pnm"
+                      "png" "gif" "bmp" "tif" "jpeg" "jpg"))
+                   "sxiv"
+                   '(file))
+             (list (openwith-make-extension-regexp
+                    '("doc" "xls" "ppt" "odt" "ods" "odg" "odp"))
+                   "libreoffice"
+                   '(file))
+             '("\\.lyx" "lyx" (file))
+             '("\\.chm" "kchmviewer" (file))
+             (list (openwith-make-extension-regexp
+                    '("pdf" "ps" "ps.gz" "dvi"))
+                   "zathura"
+                   '(file))
+             ))
+      (openwith-mode 1)
+      )
+#+END_SRC
+
 * TODO Theming
 ** TODO Basic Interface Settings
 Some improvements to the look and feel of Emacs that doesn't use any outside packages.
@@ -1290,7 +1381,7 @@ Replaces the asterisks you usually get in Org mode with more visually interestin
       #+END_SRC
 
 *** Easy-to-add emacs-lisp template
-Great for editing this document in paticular. If you ever need to add a new block of code just type "el" and then hit =Tab=.
+Great for editing this document in paticular. If you ever need to add a new block of code just type "<el" and then hit =Tab=.
  #+BEGIN_SRC emacs-lisp
    (add-to-list 'org-structure-template-alist
 	        '("el" "#+BEGIN_SRC emacs-lisp\n?\n#+END_SRC"))
